# torch_projects

./: README.md  pyproject.toml
torch_projects/admet_prediction/caco-2/: GCN_results.csv  data.py  model.py  predict.py  train.py
torch_projects/admet_prediction/caco-2/models/: GCN_best.pt  GCN_final.pt  caco2_model.pt  caco2_mpnn_model.pt
torch_projects/mnist_from_scratch/: activation.py  layers.py  loss.py  predict.py  train.py
torch_projects/mnist_from_scratch/models/: mnist.pt
